# EZ2C-Fall23

./: .gitignore  Gen-Src.xmind  I2C.c  README.md
Setting_10.26/include/Blink/: Blink.h
Setting_10.26/src-gen/Blink/: Blink.c  CMakeLists.txt  _blink_main.c  _blink_main.h
data-analysis/: analyze.py  noise_analyze.py  noise_analyze_mean_var.py
lf-3pi/ez2c-lib/: CMakeLists.txt  ez2c-lib.txt  rise_time.pio  rise_time_alt.pio  rise_time_noblock.pio  rise_time_old.pio
lf-3pi/ez2c-lib/src/: circular_buffer.c  circular_buffer.h  common.c  common.h  ez2c.h  ez2c_common.c  ez2c_common.h  ez2c_master.c  ez2c_master.h  ez2c_slave.c  ez2c_slave.h  i2c_utils.c  i2c_utils.h  pio_utils.c  pio_utils.h  rise_time.c  rise_time.h  rise_time_noblock.c  rise_time_noblock.h  uint32_array.c  uint32_array.h
lf-3pi/ez2c-lib/src/deprecated/: ez2c_master_old.h  rise_time_old.c
lf-3pi/i2c-lib/: CMakeLists.txt  i2c-lib.txt
lf-3pi/i2c-lib/src/: ez2c.c  ez2c.h
lf-3pi/include/Blink_Federated/: Blink_Federated.h
lf-3pi/include/CircularSlave/: CircularSlave.h
lf-3pi/include/Display/: Display.h
lf-3pi/include/HashMaster/: HashMaster.h
lf-3pi/include/I2cCircular1/: I2cCircular1.h
lf-3pi/include/I2cDetection/: I2cDetection.h
lf-3pi/include/I2cMaster/: I2cMaster.h
lf-3pi/include/I2cSlave/: I2cSlave.h
lf-3pi/pio-lib/: CMakeLists.txt  intr.pio  pio-lib.txt  rise_time.pio
lf-3pi/pio-lib/src/: intr_test.c  intr_test.h  led.c  led.h  pio_lib_utils.c  pio_lib_utils.h  rise_time.c  rise_time.h
lf-3pi/src/: Blink.lf  Blink2.lf  CMakeLists.txt  HashMaster.lf  HashSlave.lf  I2cCircular1.lf  I2cCircular2.lf  I2cCircular3.lf  I2cCircular4.lf  I2cDetection.lf  I2cExample.lf  I2cMaster.lf  I2cSlave copy.lf  I2cSlave.lf  I2cSlave1.lf  I2cSlave2.lf  I2cSlave3.lf  federation.lf  i2cslave.txt
lf-3pi/src-gen/Blink/: Blink.c  (+2 more)
(+202 files in other folders)
